--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,12 +1,12 @@
-.locations-list {
-    height: 60vh;
-    overflow: auto;
-    list-style: none;
-}
+/*.locations-list {*/
+    /*height: 60vh;*/
+    /*overflow: auto;*/
+    /*list-style: none;*/
+/*}*/
 
-.input-search {
-    border-radius: 7pt;
-    text-align: left;
-    width: 90%;
-    margin: 15px;
-}
+/*.input-search {*/
+    /*border-radius: 7pt;*/
+    /*text-align: left;*/
+    /*width: 90%;*/
+    /*margin: 15px;*/
+/*}*/
